# aether

./: LICENSE  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: ci.yml
core-audio/: build.gradle.kts
core-audio/src/main/cpp/: AdsrEnvelope.cpp  AdsrEnvelope.h  BiquadFilter.cpp  BiquadFilter.h  CMakeLists.txt  RingBuffer.cpp  RingBuffer.h  SpatialPanner.cpp  SpatialPanner.h  VoiceManager.cpp  VoiceManager.h  audio_engine.cpp
core-audio/src/main/java/com/squeakgames/aether/audio/: AetherAudioEngine.kt  AudioEngineState.kt  DspLoop.kt  SpatialSource.kt  Voice.kt
core-audio/src/test/cpp/: CMakeLists.txt  test_main.cpp
core-audio/src/test/java/com/squeakgames/aether/audio/: AetherAudioEngineTest.kt  DspLoopTest.kt
core-data/: build.gradle.kts
core-data/src/main/java/com/squeakgames/aether/data/: AetherDatabase.kt  AnchoredAssetDao.kt  AnchoredAssetEntity.kt  BondGraphDao.kt  BondGraphEntity.kt  CreatureDao.kt  CreatureEntity.kt  SessionDao.kt  SessionEntity.kt
core-data/src/test/java/com/squeakgames/aether/data/: DataTest.kt
core-model/: build.gradle.kts
core-model/src/main/java/com/squeakgames/aether/model/: BondLevel.kt  CareAction.kt  CreatureProfile.kt  CreatureState.kt  EnvironmentalContext.kt  EnvironmentalStressIndex.kt  Species.kt
core-model/src/test/java/com/squeakgames/aether/model/: ModelTest.kt
core-xr/: build.gradle.kts
core-xr/src/main/java/com/squeakgames/aether/xr/: CapabilityDetector.kt  HeadTrackingStateProvider.kt  ProjectedActivityLifecycleHelper.kt  SpatialCapabilitiesProvider.kt  (+1 more)
gradle/: libs.versions.toml
(+6 files in other folders)
